qt/network/gen_qsslsocket.h

class QMetaObject;
class QObject;
class QSslSocket;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QSslSocket QSslSocket;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVariant QVariant;
void QSslSocket_connectToHostEncrypted42(QSslSocket* self, struct miqt_string hostName, uint16_t port, struct miqt_string sslPeerName, int mode);
void QSslSocket_connectToHostEncrypted5(QSslSocket* self, struct miqt_string hostName, uint16_t port, struct miqt_string sslPeerName, int mode, int protocol);
void QSslSocket_setLocalCertificate2(QSslSocket* self, struct miqt_string fileName, int format);
void QSslSocket_setPrivateKey2(QSslSocket* self, struct miqt_string fileName, int algorithm);
void QSslSocket_setPrivateKey3(QSslSocket* self, struct miqt_string fileName, int algorithm, int format);
void QSslSocket_setPrivateKey4(QSslSocket* self, struct miqt_string fileName, int algorithm, int format, struct miqt_string passPhrase);
bool QSslSocket_addCaCertificates2(QSslSocket* self, struct miqt_string path, int format);
bool QSslSocket_addCaCertificates3(QSslSocket* self, struct miqt_string path, int format, int syntax);
bool QSslSocket_addDefaultCaCertificates2(struct miqt_string path, int format);
bool QSslSocket_addDefaultCaCertificates3(struct miqt_string path, int format, int syntax);
bool QSslSocket_waitForEncrypted1(QSslSocket* self, int msecs);
bool QSslSocket_override_virtual_metacall(void* self, intptr_t slot);
int QSslSocket_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QSslSocket_override_virtual_resume(void* self, intptr_t slot);
void QSslSocket_virtualbase_resume(void* self);
bool QSslSocket_override_virtual_setSocketDescriptor(void* self, intptr_t slot);
bool QSslSocket_virtualbase_setSocketDescriptor(void* self, intptr_t socketDescriptor, int state, int openMode);
bool QSslSocket_override_virtual_connectToHost(void* self, intptr_t slot);
void QSslSocket_virtualbase_connectToHost(void* self, struct miqt_string hostName, uint16_t port, int openMode, int protocol);
bool QSslSocket_override_virtual_disconnectFromHost(void* self, intptr_t slot);
void QSslSocket_virtualbase_disconnectFromHost(void* self);
bool QSslSocket_override_virtual_setSocketOption(void* self, intptr_t slot);
void QSslSocket_virtualbase_setSocketOption(void* self, int option, QVariant* value);
bool QSslSocket_override_virtual_socketOption(void* self, intptr_t slot);
QVariant* QSslSocket_virtualbase_socketOption(void* self, int option);
bool QSslSocket_override_virtual_bytesAvailable(void* self, intptr_t slot);
long long QSslSocket_virtualbase_bytesAvailable(const void* self);
bool QSslSocket_override_virtual_bytesToWrite(void* self, intptr_t slot);
long long QSslSocket_virtualbase_bytesToWrite(const void* self);
bool QSslSocket_override_virtual_canReadLine(void* self, intptr_t slot);
bool QSslSocket_virtualbase_canReadLine(const void* self);
bool QSslSocket_override_virtual_close(void* self, intptr_t slot);
void QSslSocket_virtualbase_close(void* self);
bool QSslSocket_override_virtual_atEnd(void* self, intptr_t slot);
bool QSslSocket_virtualbase_atEnd(const void* self);
bool QSslSocket_override_virtual_setReadBufferSize(void* self, intptr_t slot);
void QSslSocket_virtualbase_setReadBufferSize(void* self, long long size);
bool QSslSocket_override_virtual_waitForConnected(void* self, intptr_t slot);
bool QSslSocket_virtualbase_waitForConnected(void* self, int msecs);
bool QSslSocket_override_virtual_waitForReadyRead(void* self, intptr_t slot);
bool QSslSocket_virtualbase_waitForReadyRead(void* self, int msecs);
bool QSslSocket_override_virtual_waitForBytesWritten(void* self, intptr_t slot);
bool QSslSocket_virtualbase_waitForBytesWritten(void* self, int msecs);
bool QSslSocket_override_virtual_waitForDisconnected(void* self, intptr_t slot);
bool QSslSocket_virtualbase_waitForDisconnected(void* self, int msecs);
bool QSslSocket_override_virtual_readData(void* self, intptr_t slot);
long long QSslSocket_virtualbase_readData(void* self, char* data, long long maxlen);
bool QSslSocket_override_virtual_writeData(void* self, intptr_t slot);
long long QSslSocket_virtualbase_writeData(void* self, const char* data, long long len);
bool QSslSocket_override_virtual_socketDescriptor(void* self, intptr_t slot);
intptr_t QSslSocket_virtualbase_socketDescriptor(const void* self);
bool QSslSocket_override_virtual_isSequential(void* self, intptr_t slot);
bool QSslSocket_virtualbase_isSequential(const void* self);
bool QSslSocket_override_virtual_readLineData(void* self, intptr_t slot);
long long QSslSocket_virtualbase_readLineData(void* self, char* data, long long maxlen);
bool QSslSocket_override_virtual_open(void* self, intptr_t slot);
bool QSslSocket_virtualbase_open(void* self, int mode);
bool QSslSocket_override_virtual_pos(void* self, intptr_t slot);
long long QSslSocket_virtualbase_pos(const void* self);
bool QSslSocket_override_virtual_size(void* self, intptr_t slot);
long long QSslSocket_virtualbase_size(const void* self);
bool QSslSocket_override_virtual_seek(void* self, intptr_t slot);
bool QSslSocket_virtualbase_seek(void* self, long long pos);
bool QSslSocket_override_virtual_reset(void* self, intptr_t slot);
bool QSslSocket_virtualbase_reset(void* self);
bool QSslSocket_override_virtual_event(void* self, intptr_t slot);
bool QSslSocket_virtualbase_event(void* self, QEvent* event);
bool QSslSocket_override_virtual_eventFilter(void* self, intptr_t slot);
bool QSslSocket_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QSslSocket_override_virtual_timerEvent(void* self, intptr_t slot);
void QSslSocket_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QSslSocket_override_virtual_childEvent(void* self, intptr_t slot);
void QSslSocket_virtualbase_childEvent(void* self, QChildEvent* event);
bool QSslSocket_override_virtual_customEvent(void* self, intptr_t slot);
void QSslSocket_virtualbase_customEvent(void* self, QEvent* event);
bool QSslSocket_override_virtual_connectNotify(void* self, intptr_t slot);
void QSslSocket_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QSslSocket_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QSslSocket_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QSslSocket_staticMetaObject();
void QSslSocket_delete(QSslSocket* self);