qt/network/gen_qsslsocket.nim

proc fcQSslSocket_connectToHostEncrypted42(self: pointer, hostName: struct_miqt_string, port: cushort, sslPeerName: struct_miqt_string, mode: cint): void {.importc: "QSslSocket_connectToHostEncrypted42".}
proc fcQSslSocket_connectToHostEncrypted5(self: pointer, hostName: struct_miqt_string, port: cushort, sslPeerName: struct_miqt_string, mode: cint, protocol: cint): void {.importc: "QSslSocket_connectToHostEncrypted5".}
proc fcQSslSocket_setLocalCertificate2(self: pointer, fileName: struct_miqt_string, format: cint): void {.importc: "QSslSocket_setLocalCertificate2".}
proc fcQSslSocket_setPrivateKey2(self: pointer, fileName: struct_miqt_string, algorithm: cint): void {.importc: "QSslSocket_setPrivateKey2".}
proc fcQSslSocket_setPrivateKey3(self: pointer, fileName: struct_miqt_string, algorithm: cint, format: cint): void {.importc: "QSslSocket_setPrivateKey3".}
proc fcQSslSocket_setPrivateKey4(self: pointer, fileName: struct_miqt_string, algorithm: cint, format: cint, passPhrase: struct_miqt_string): void {.importc: "QSslSocket_setPrivateKey4".}
proc fcQSslSocket_addCaCertificates2(self: pointer, path: struct_miqt_string, format: cint): bool {.importc: "QSslSocket_addCaCertificates2".}
proc fcQSslSocket_addCaCertificates3(self: pointer, path: struct_miqt_string, format: cint, syntax: cint): bool {.importc: "QSslSocket_addCaCertificates3".}
proc fcQSslSocket_addDefaultCaCertificates2(path: struct_miqt_string, format: cint): bool {.importc: "QSslSocket_addDefaultCaCertificates2".}
proc fcQSslSocket_addDefaultCaCertificates3(path: struct_miqt_string, format: cint, syntax: cint): bool {.importc: "QSslSocket_addDefaultCaCertificates3".}
proc fcQSslSocket_waitForEncrypted1(self: pointer, msecs: cint): bool {.importc: "QSslSocket_waitForEncrypted1".}
proc fQSslSocket_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QSslSocket_virtualbase_metacall".}
proc fcQSslSocket_override_virtual_metacall(self: pointer, slot: int) {.importc: "QSslSocket_override_virtual_metacall".}
proc fQSslSocket_virtualbase_resume(self: pointer, ): void{.importc: "QSslSocket_virtualbase_resume".}
proc fcQSslSocket_override_virtual_resume(self: pointer, slot: int) {.importc: "QSslSocket_override_virtual_resume".}
proc fQSslSocket_virtualbase_setSocketDescriptor(self: pointer, socketDescriptor: uint, state: cint, openMode: cint): bool{.importc: "QSslSocket_virtualbase_setSocketDescriptor".}
proc fcQSslSocket_override_virtual_setSocketDescriptor(self: pointer, slot: int) {.importc: "QSslSocket_override_virtual_setSocketDescriptor".}
proc fQSslSocket_virtualbase_connectToHost(self: pointer, hostName: struct_miqt_string, port: cushort, openMode: cint, protocol: cint): void{.importc: "QSslSocket_virtualbase_connectToHost".}
proc fcQSslSocket_override_virtual_connectToHost(self: pointer, slot: int) {.importc: "QSslSocket_override_virtual_connectToHost".}
proc fQSslSocket_virtualbase_disconnectFromHost(self: pointer, ): void{.importc: "QSslSocket_virtualbase_disconnectFromHost".}
proc fcQSslSocket_override_virtual_disconnectFromHost(self: pointer, slot: int) {.importc: "QSslSocket_override_virtual_disconnectFromHost".}
proc fQSslSocket_virtualbase_setSocketOption(self: pointer, option: cint, value: pointer): void{.importc: "QSslSocket_virtualbase_setSocketOption".}
proc fcQSslSocket_override_virtual_setSocketOption(self: pointer, slot: int) {.importc: "QSslSocket_override_virtual_setSocketOption".}
proc fQSslSocket_virtualbase_socketOption(self: pointer, option: cint): pointer{.importc: "QSslSocket_virtualbase_socketOption".}
proc fcQSslSocket_override_virtual_socketOption(self: pointer, slot: int) {.importc: "QSslSocket_override_virtual_socketOption".}
proc fQSslSocket_virtualbase_bytesAvailable(self: pointer, ): clonglong{.importc: "QSslSocket_virtualbase_bytesAvailable".}
proc fcQSslSocket_override_virtual_bytesAvailable(self: pointer, slot: int) {.importc: "QSslSocket_override_virtual_bytesAvailable".}
proc fQSslSocket_virtualbase_bytesToWrite(self: pointer, ): clonglong{.importc: "QSslSocket_virtualbase_bytesToWrite".}
proc fcQSslSocket_override_virtual_bytesToWrite(self: pointer, slot: int) {.importc: "QSslSocket_override_virtual_bytesToWrite".}
proc fQSslSocket_virtualbase_canReadLine(self: pointer, ): bool{.importc: "QSslSocket_virtualbase_canReadLine".}
proc fcQSslSocket_override_virtual_canReadLine(self: pointer, slot: int) {.importc: "QSslSocket_override_virtual_canReadLine".}
proc fQSslSocket_virtualbase_close(self: pointer, ): void{.importc: "QSslSocket_virtualbase_close".}
proc fcQSslSocket_override_virtual_close(self: pointer, slot: int) {.importc: "QSslSocket_override_virtual_close".}
proc fQSslSocket_virtualbase_atEnd(self: pointer, ): bool{.importc: "QSslSocket_virtualbase_atEnd".}
proc fcQSslSocket_override_virtual_atEnd(self: pointer, slot: int) {.importc: "QSslSocket_override_virtual_atEnd".}
proc fQSslSocket_virtualbase_setReadBufferSize(self: pointer, size: clonglong): void{.importc: "QSslSocket_virtualbase_setReadBufferSize".}
proc fcQSslSocket_override_virtual_setReadBufferSize(self: pointer, slot: int) {.importc: "QSslSocket_override_virtual_setReadBufferSize".}
proc fQSslSocket_virtualbase_waitForConnected(self: pointer, msecs: cint): bool{.importc: "QSslSocket_virtualbase_waitForConnected".}
proc fcQSslSocket_override_virtual_waitForConnected(self: pointer, slot: int) {.importc: "QSslSocket_override_virtual_waitForConnected".}
proc fQSslSocket_virtualbase_waitForReadyRead(self: pointer, msecs: cint): bool{.importc: "QSslSocket_virtualbase_waitForReadyRead".}
proc fcQSslSocket_override_virtual_waitForReadyRead(self: pointer, slot: int) {.importc: "QSslSocket_override_virtual_waitForReadyRead".}
proc fQSslSocket_virtualbase_waitForBytesWritten(self: pointer, msecs: cint): bool{.importc: "QSslSocket_virtualbase_waitForBytesWritten".}
proc fcQSslSocket_override_virtual_waitForBytesWritten(self: pointer, slot: int) {.importc: "QSslSocket_override_virtual_waitForBytesWritten".}
proc fQSslSocket_virtualbase_waitForDisconnected(self: pointer, msecs: cint): bool{.importc: "QSslSocket_virtualbase_waitForDisconnected".}
proc fcQSslSocket_override_virtual_waitForDisconnected(self: pointer, slot: int) {.importc: "QSslSocket_override_virtual_waitForDisconnected".}
proc fQSslSocket_virtualbase_readData(self: pointer, data: cstring, maxlen: clonglong): clonglong{.importc: "QSslSocket_virtualbase_readData".}
proc fcQSslSocket_override_virtual_readData(self: pointer, slot: int) {.importc: "QSslSocket_override_virtual_readData".}
proc fQSslSocket_virtualbase_writeData(self: pointer, data: cstring, len: clonglong): clonglong{.importc: "QSslSocket_virtualbase_writeData".}
proc fcQSslSocket_override_virtual_writeData(self: pointer, slot: int) {.importc: "QSslSocket_override_virtual_writeData".}
proc fQSslSocket_virtualbase_socketDescriptor(self: pointer, ): uint{.importc: "QSslSocket_virtualbase_socketDescriptor".}
proc fcQSslSocket_override_virtual_socketDescriptor(self: pointer, slot: int) {.importc: "QSslSocket_override_virtual_socketDescriptor".}
proc fQSslSocket_virtualbase_isSequential(self: pointer, ): bool{.importc: "QSslSocket_virtualbase_isSequential".}
proc fcQSslSocket_override_virtual_isSequential(self: pointer, slot: int) {.importc: "QSslSocket_override_virtual_isSequential".}
proc fQSslSocket_virtualbase_readLineData(self: pointer, data: cstring, maxlen: clonglong): clonglong{.importc: "QSslSocket_virtualbase_readLineData".}
proc fcQSslSocket_override_virtual_readLineData(self: pointer, slot: int) {.importc: "QSslSocket_override_virtual_readLineData".}
proc fQSslSocket_virtualbase_open(self: pointer, mode: cint): bool{.importc: "QSslSocket_virtualbase_open".}
proc fcQSslSocket_override_virtual_open(self: pointer, slot: int) {.importc: "QSslSocket_override_virtual_open".}
proc fQSslSocket_virtualbase_pos(self: pointer, ): clonglong{.importc: "QSslSocket_virtualbase_pos".}
proc fcQSslSocket_override_virtual_pos(self: pointer, slot: int) {.importc: "QSslSocket_override_virtual_pos".}
proc fQSslSocket_virtualbase_size(self: pointer, ): clonglong{.importc: "QSslSocket_virtualbase_size".}
proc fcQSslSocket_override_virtual_size(self: pointer, slot: int) {.importc: "QSslSocket_override_virtual_size".}
proc fQSslSocket_virtualbase_seek(self: pointer, pos: clonglong): bool{.importc: "QSslSocket_virtualbase_seek".}
proc fcQSslSocket_override_virtual_seek(self: pointer, slot: int) {.importc: "QSslSocket_override_virtual_seek".}
proc fQSslSocket_virtualbase_reset(self: pointer, ): bool{.importc: "QSslSocket_virtualbase_reset".}
proc fcQSslSocket_override_virtual_reset(self: pointer, slot: int) {.importc: "QSslSocket_override_virtual_reset".}
proc fQSslSocket_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QSslSocket_virtualbase_event".}
proc fcQSslSocket_override_virtual_event(self: pointer, slot: int) {.importc: "QSslSocket_override_virtual_event".}
proc fQSslSocket_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QSslSocket_virtualbase_eventFilter".}
proc fcQSslSocket_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QSslSocket_override_virtual_eventFilter".}
proc fQSslSocket_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QSslSocket_virtualbase_timerEvent".}
proc fcQSslSocket_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QSslSocket_override_virtual_timerEvent".}
proc fQSslSocket_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QSslSocket_virtualbase_childEvent".}
proc fcQSslSocket_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QSslSocket_override_virtual_childEvent".}
proc fQSslSocket_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QSslSocket_virtualbase_customEvent".}
proc fcQSslSocket_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QSslSocket_override_virtual_customEvent".}
proc fQSslSocket_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QSslSocket_virtualbase_connectNotify".}
proc fcQSslSocket_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QSslSocket_override_virtual_connectNotify".}
proc fQSslSocket_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QSslSocket_virtualbase_disconnectNotify".}
proc fcQSslSocket_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QSslSocket_override_virtual_disconnectNotify".}
proc fcQSslSocket_staticMetaObject(): pointer {.importc: "QSslSocket_staticMetaObject".}
proc fcQSslSocket_delete(self: pointer) {.importc: "QSslSocket_delete".}


func init*(T: type QSslSocket, h: ptr cQSslSocket): QSslSocket =
  T(h: h)
proc create*(T: type QSslSocket, ): QSslSocket =

  QSslSocket.init(fcQSslSocket_new())
proc create*(T: type QSslSocket, parent: gen_qobject.QObject): QSslSocket =

  QSslSocket.init(fcQSslSocket_new2(parent.h))
proc metaObject*(self: QSslSocket, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQSslSocket_metaObject(self.h))

proc metacast*(self: QSslSocket, param1: cstring): pointer =

  fcQSslSocket_metacast(self.h, param1)

proc metacall*(self: QSslSocket, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQSslSocket_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QSslSocket, s: cstring): string =

  let v_ms = fcQSslSocket_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type QSslSocket, s: cstring): string =

  let v_ms = fcQSslSocket_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc resume*(self: QSslSocket, ): void =

  fcQSslSocket_resume(self.h)

proc connectToHostEncrypted*(self: QSslSocket, hostName: string, port: cushort): void =
